--- a/TianWen.XiaoZhen1Qu.Web/DataSources.config
+++ b/TianWen.XiaoZhen1Qu.Web/DataSources.config
@@ -22,7 +22,7 @@
   <DataSource>
     <Name>Default</Name>
     <SourceType>ORACLE</SourceType>
-    <ConnectionString>User ID=c##XIAOZHEN1QU;Data Source=orcl;Password=XIAOZHEN1QU;</ConnectionString>
+    <ConnectionString>User ID=c##infotownlet;Data Source=localhost/orcl;Password=infotownlet;</ConnectionString>
     <DbHelpType>OracleDbHelp</DbHelpType>
     <Attribures>
       <string>DataSourceDirection=Source</string>
