--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -166,6 +166,7 @@
     <Content Include="Areas\Business\Css\FC\FC_DZF.css" />
     <Content Include="Areas\Business\Css\FC\FC_FW.css" />
     <Content Include="Areas\Business\Css\FC\FC_SP.css" />
+    <Content Include="Areas\Business\Css\FC\FC_XZL.css" />
     <Content Include="Areas\Business\Css\GRZL\GRZL.css" />
     <Content Include="Areas\Business\Css\GRZL\MMSZ.css" />
     <Content Include="Areas\Business\Css\HBSJ.css" />
@@ -346,6 +347,9 @@
     <Content Include="Areas\Business\Scripts\Business\FC\FC_SP.js" />
     <Content Include="Areas\Business\Scripts\Business\FC\FC_SPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\FC\FC_SPZP.js" />
+    <Content Include="Areas\Business\Scripts\Business\FC\FC_XZL.js" />
+    <Content Include="Areas\Business\Scripts\Business\FC\FC_XZLYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\FC\FC_XZLZP.js" />
     <Content Include="Areas\Business\Scripts\Business\FWCG\FWCG.js" />
     <Content Include="Areas\Business\Scripts\Business\FC\FC_FW.js" />
     <Content Include="Areas\Business\Scripts\Business\FC\FC_FWYZ.js" />
@@ -702,6 +706,7 @@
     <Compile Include="Areas\Business\Controllers\FC\FC_DZFController.cs" />
     <Compile Include="Areas\Business\Controllers\FC\FC_FWController.cs" />
     <Compile Include="Areas\Business\Controllers\FC\FC_SPController.cs" />
+    <Compile Include="Areas\Business\Controllers\FC\FC_XZLController.cs" />
     <Compile Include="Areas\Business\Controllers\GRZLController.cs" />
     <Compile Include="Areas\Business\Controllers\HFCZController.cs" />
     <Compile Include="Areas\Business\Controllers\LBXZController.cs" />
@@ -810,6 +815,7 @@
     <Content Include="Areas\Business\Scripts\UEditor\third-party\video-js\font\vjs.ttf" />
     <Content Include="Areas\Business\Scripts\UEditor\third-party\video-js\font\vjs.woff" />
     <Content Include="Areas\Business\Views\FC_SP\FC_SP.cshtml" />
+    <Content Include="Areas\Business\Views\FC_XZL\FC_XZL.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
