--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Maps\DJJDJL_Map.cs" />
     <Compile Include="Maps\FC_DZFJBXX_Map.cs" />
     <Compile Include="Maps\FC_SPJBXX_Map.cs" />
+    <Compile Include="Maps\FC_XZLJBXX_Map.cs" />
     <Compile Include="Maps\FWCZJBXX_Map.cs" />
     <Compile Include="Maps\JCXX_Map.cs" />
     <Compile Include="Maps\PHOTOS_Map.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Models\EncryptionHelper.cs" />
     <Compile Include="Models\FC_DZFJBXX.cs" />
     <Compile Include="Models\FC_SPJBXX.cs" />
+    <Compile Include="Models\FC_XZLJBXX.cs" />
     <Compile Include="Models\FWCZJBXX.cs" />
     <Compile Include="Models\JCXX.cs" />
     <Compile Include="Models\PHOTOS.cs" />
