--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Maps\CODES_Map.cs" />
     <Compile Include="Maps\DISTRICT_Map.cs" />
     <Compile Include="Maps\DJJDJL_Map.cs" />
+    <Compile Include="Maps\ES_SJSM_ESSJJBXX_Map.cs" />
+    <Compile Include="Maps\FC_CKCFTDCWJBXX_Map.cs" />
     <Compile Include="Maps\FC_DZFJBXX_Map.cs" />
     <Compile Include="Maps\FC_SPJBXX_Map.cs" />
     <Compile Include="Maps\FC_XZLJBXX_Map.cs" />
@@ -76,6 +78,8 @@
     <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\DJJDJL.cs" />
     <Compile Include="Models\EncryptionHelper.cs" />
+    <Compile Include="Models\ES_SJSM_ESSJJBXX.cs" />
+    <Compile Include="Models\FC_CKCFTDCWJBXX.cs" />
     <Compile Include="Models\FC_DZFJBXX.cs" />
     <Compile Include="Models\FC_SPJBXX.cs" />
     <Compile Include="Models\FC_XZLJBXX.cs" />
