--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -53,9 +53,12 @@
   <ItemGroup>
     <Compile Include="Common\Common.cs" />
     <Compile Include="Enum\XXLB.cs" />
+    <Compile Include="Maps\CODES_COMPUTER_Map.cs" />
     <Compile Include="Maps\CODES_Map.cs" />
+    <Compile Include="Maps\CODES_PHONE_Map.cs" />
     <Compile Include="Maps\DISTRICT_Map.cs" />
     <Compile Include="Maps\DJJDJL_Map.cs" />
+    <Compile Include="Maps\ES_SJSM_BJBDNJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_ESSJJBXX_Map.cs" />
     <Compile Include="Maps\FC_CKCFTDCWJBXX_Map.cs" />
     <Compile Include="Maps\FC_DZFJBXX_Map.cs" />
@@ -75,9 +78,12 @@
     <Compile Include="Maps\YXJBXX_Map.cs" />
     <Compile Include="Maps\ZDDLXX_Map.cs" />
     <Compile Include="Models\CODES.cs" />
+    <Compile Include="Models\CODES_COMPUTER.cs" />
+    <Compile Include="Models\CODES_PHONE.cs" />
     <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\DJJDJL.cs" />
     <Compile Include="Models\EncryptionHelper.cs" />
+    <Compile Include="Models\ES_SJSM_BJBDNJBXX.cs" />
     <Compile Include="Models\ES_SJSM_ESSJJBXX.cs" />
     <Compile Include="Models\FC_CKCFTDCWJBXX.cs" />
     <Compile Include="Models\FC_DZFJBXX.cs" />
