--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Maps\DJJDJL_Map.cs" />
     <Compile Include="Maps\ES_SJSM_BJBDNJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_ESSJJBXX_Map.cs" />
+    <Compile Include="Maps\ES_SJSM_PBDNJBXX_Map.cs" />
     <Compile Include="Maps\FC_CKCFTDCWJBXX_Map.cs" />
     <Compile Include="Maps\FC_DZFJBXX_Map.cs" />
     <Compile Include="Maps\FC_SPJBXX_Map.cs" />
@@ -85,6 +86,7 @@
     <Compile Include="Models\EncryptionHelper.cs" />
     <Compile Include="Models\ES_SJSM_BJBDNJBXX.cs" />
     <Compile Include="Models\ES_SJSM_ESSJJBXX.cs" />
+    <Compile Include="Models\ES_SJSM_PBDNJBXX.cs" />
     <Compile Include="Models\FC_CKCFTDCWJBXX.cs" />
     <Compile Include="Models\FC_DZFJBXX.cs" />
     <Compile Include="Models\FC_SPJBXX.cs" />
