--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -165,6 +165,7 @@
     <Content Include="Areas\Business\Css\ES\ES_SJSM_BJBDN.css" />
     <Content Include="Areas\Business\Css\ES\ES_SJSM_ESSJ.css" />
     <Content Include="Areas\Business\Css\ES\ES_SJSM_PBDN.css" />
+    <Content Include="Areas\Business\Css\ES\ES_SJSM_SMCP.css" />
     <Content Include="Areas\Business\Css\FBCG.css" />
     <Content Include="Areas\Business\Css\FC\FC_CKCFTDCW.css" />
     <Content Include="Areas\Business\Css\FC\FC_DZF.css" />
@@ -351,6 +352,8 @@
     <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_ESSJYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_PBDN.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_PBDNYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_SMCP.js" />
+    <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_SMCPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\FC\FC_CKCFTDCW.js" />
     <Content Include="Areas\Business\Scripts\Business\FC\FC_CKCFTDCWYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\FC\FC_DZF.js" />
@@ -711,9 +714,10 @@
     <Compile Include="Areas\Business\Controllers\BZZX\BZZXController.cs" />
     <Compile Include="Areas\Business\Controllers\BZZX\WZYJController.cs" />
     <Compile Include="Areas\Business\Controllers\CommonController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\FC_SJSM_BJBDNController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\FC_SJSM_ESSJController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\FC_SJSM_PBDNController.cs" />
+    <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_BJBDNController.cs" />
+    <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_ESSJController.cs" />
+    <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_PBDNController.cs" />
+    <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_SMCPController.cs" />
     <Compile Include="Areas\Business\Controllers\FBCGController.cs" />
     <Compile Include="Areas\Business\Controllers\FC\FC_CKCFTDCWController.cs" />
     <Compile Include="Areas\Business\Controllers\FC\FC_DZFController.cs" />
@@ -833,6 +837,7 @@
     <Content Include="Areas\Business\Views\ES_SJSM_ESSJ\ES_SJSM_ESSJ.cshtml" />
     <Content Include="Areas\Business\Views\ES_SJSM_BJBDN\ES_SJSM_BJBDN.cshtml" />
     <Content Include="Areas\Business\Views\ES_SJSM_PBDN\ES_SJSM_PBDN.cshtml" />
+    <Content Include="Areas\Business\Views\ES_SJSM_SMCP\ES_SJSM_SMCP.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
