--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -53,6 +53,7 @@
     <Compile Include="IES_SJSM_BJBDNBLL.cs" />
     <Compile Include="IES_SJSM_ESSJBLL.cs" />
     <Compile Include="IES_SJSM_PBDNBLL.cs" />
+    <Compile Include="IES_SJSM_SMCPBLL.cs" />
     <Compile Include="IFC_CKCFTDCWBLL.cs" />
     <Compile Include="IFC_DZFBLL.cs" />
     <Compile Include="IFC_SPBLL.cs" />
