--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Common\Common.cs" />
     <Compile Include="Enum\XXLB.cs" />
     <Compile Include="Maps\CODES_COMPUTER_Map.cs" />
+    <Compile Include="Maps\CODES_JDJJBG_Map.cs" />
     <Compile Include="Maps\CODES_Map.cs" />
     <Compile Include="Maps\CODES_PHONE_Map.cs" />
     <Compile Include="Maps\DISTRICT_Map.cs" />
@@ -82,10 +83,12 @@
     <Compile Include="Maps\ZDDLXX_Map.cs" />
     <Compile Include="Models\CODES.cs" />
     <Compile Include="Models\CODES_COMPUTER.cs" />
+    <Compile Include="Models\CODES_JDJJBG.cs" />
     <Compile Include="Models\CODES_PHONE.cs" />
     <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\DJJDJL.cs" />
     <Compile Include="Models\EncryptionHelper.cs" />
+    <Compile Include="Models\ES_JDJJBG_ESJDJBXX.cs" />
     <Compile Include="Models\ES_SJSM_BJBDNJBXX.cs" />
     <Compile Include="Models\ES_SJSM_ESSJJBXX.cs" />
     <Compile Include="Models\ES_SJSM_PBDNJBXX.cs" />
