--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -52,6 +52,7 @@
     <Compile Include="IDAO.cs" />
     <Compile Include="IES_JDJJBG_ESJDBLL.cs" />
     <Compile Include="IES_JDJJBG_ESJJBLL.cs" />
+    <Compile Include="IES_JDJJBG_JJRYBLL.cs" />
     <Compile Include="IES_SJSM_BJBDNBLL.cs" />
     <Compile Include="IES_SJSM_ESSJBLL.cs" />
     <Compile Include="IES_SJSM_PBDNBLL.cs" />
