--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -164,6 +164,7 @@
     <Content Include="Areas\Business\Css\Common\XZQ.css" />
     <Content Include="Areas\Business\Css\ES\ES_JDJJBG_ESJD.css" />
     <Content Include="Areas\Business\Css\ES\ES_JDJJBG_ESJJ.css" />
+    <Content Include="Areas\Business\Css\ES\ES_JDJJBG_JJRY.css" />
     <Content Include="Areas\Business\Css\ES\ES_SJSM_BJBDN.css" />
     <Content Include="Areas\Business\Css\ES\ES_SJSM_ESSJ.css" />
     <Content Include="Areas\Business\Css\ES\ES_SJSM_PBDN.css" />
@@ -353,6 +354,8 @@
     <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_ESJDYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_ESJJ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_ESJJYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_JJRY.js" />
+    <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_JJRYYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_BJBDN.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_BJBDNYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_ESSJ.js" />
@@ -725,6 +728,7 @@
     <Compile Include="Areas\Business\Controllers\CommonController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_ESJDController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_ESJJController.cs" />
+    <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_JJRYController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_BJBDNController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_ESSJController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_PBDNController.cs" />
@@ -853,6 +857,7 @@
     <Content Include="Areas\Business\Views\ES_SJSM_TSJ\ES_SJSM_TSJ.cshtml" />
     <Content Include="Areas\Business\Views\ES_JDJJBG_ESJD\ES_JDJJBG_ESJD.cshtml" />
     <Content Include="Areas\Business\Views\ES_JDJJBG_ESJJ\ES_JDJJBG_ESJJ.cshtml" />
+    <Content Include="Areas\Business\Views\ES_JDJJBG_JJRY\ES_JDJJBG_JJRY.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
