--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Maps\DJJDJL_Map.cs" />
     <Compile Include="Maps\ES_JDJJBG_ESJDJBXX_Map.cs" />
     <Compile Include="Maps\ES_JDJJBG_ESJJJBXX_Map.cs" />
+    <Compile Include="Maps\ES_JDJJBG_JJRYJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_BJBDNJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_ESSJJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_PBDNJBXX_Map.cs" />
@@ -92,6 +93,7 @@
     <Compile Include="Models\EncryptionHelper.cs" />
     <Compile Include="Models\ES_JDJJBG_ESJDJBXX.cs" />
     <Compile Include="Models\ES_JDJJBG_ESJJJBXX.cs" />
+    <Compile Include="Models\ES_JDJJBG_JJRYJBXX.cs" />
     <Compile Include="Models\ES_SJSM_BJBDNJBXX.cs" />
     <Compile Include="Models\ES_SJSM_ESSJJBXX.cs" />
     <Compile Include="Models\ES_SJSM_PBDNJBXX.cs" />
