--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -54,6 +54,7 @@
     <Compile Include="IES_JDJJBG_ESJDBLL.cs" />
     <Compile Include="IES_JDJJBG_ESJJBLL.cs" />
     <Compile Include="IES_JDJJBG_JJRYBLL.cs" />
+    <Compile Include="IES_MYFZMR_MYETYPWJBLL.cs" />
     <Compile Include="IES_SJSM_BJBDNBLL.cs" />
     <Compile Include="IES_SJSM_ESSJBLL.cs" />
     <Compile Include="IES_SJSM_PBDNBLL.cs" />
