--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Maps\CODES_COMPUTER_Map.cs" />
     <Compile Include="Maps\CODES_JDJJBG_Map.cs" />
     <Compile Include="Maps\CODES_Map.cs" />
+    <Compile Include="Maps\CODES_MYFZMR_Map.cs" />
     <Compile Include="Maps\CODES_PHONE_Map.cs" />
     <Compile Include="Maps\DISTRICT_Map.cs" />
     <Compile Include="Maps\DJJDJL_Map.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Maps\ES_JDJJBG_ESJDJBXX_Map.cs" />
     <Compile Include="Maps\ES_JDJJBG_ESJJJBXX_Map.cs" />
     <Compile Include="Maps\ES_JDJJBG_JJRYJBXX_Map.cs" />
+    <Compile Include="Maps\ES_MYFZMR_MYETYPWJJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_BJBDNJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_ESSJJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_PBDNJBXX_Map.cs" />
@@ -88,6 +90,7 @@
     <Compile Include="Models\CODES.cs" />
     <Compile Include="Models\CODES_COMPUTER.cs" />
     <Compile Include="Models\CODES_JDJJBG.cs" />
+    <Compile Include="Models\CODES_MYFZMR.cs" />
     <Compile Include="Models\CODES_PHONE.cs" />
     <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\DJJDJL.cs" />
@@ -96,6 +99,7 @@
     <Compile Include="Models\ES_JDJJBG_ESJDJBXX.cs" />
     <Compile Include="Models\ES_JDJJBG_ESJJJBXX.cs" />
     <Compile Include="Models\ES_JDJJBG_JJRYJBXX.cs" />
+    <Compile Include="Models\ES_MYFZMR_MYETYPWJJBXX.cs" />
     <Compile Include="Models\ES_SJSM_BJBDNJBXX.cs" />
     <Compile Include="Models\ES_SJSM_ESSJJBXX.cs" />
     <Compile Include="Models\ES_SJSM_PBDNJBXX.cs" />
