--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -166,6 +166,7 @@
     <Content Include="Areas\Business\Css\ES\ES_JDJJBG_ESJD.css" />
     <Content Include="Areas\Business\Css\ES\ES_JDJJBG_ESJJ.css" />
     <Content Include="Areas\Business\Css\ES\ES_JDJJBG_JJRY.css" />
+    <Content Include="Areas\Business\Css\ES\ES_MYFZMR_FZXMXB.css" />
     <Content Include="Areas\Business\Css\ES\ES_MYFZMR_MYETYPWJ.css" />
     <Content Include="Areas\Business\Css\ES\ES_SJSM_BJBDN.css" />
     <Content Include="Areas\Business\Css\ES\ES_SJSM_ESSJ.css" />
@@ -360,6 +361,8 @@
     <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_ESJJYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_JJRY.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_JDJJBG_JJRYYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\ES\ES_MYFZMR_FZXMXB.js" />
+    <Content Include="Areas\Business\Scripts\Business\ES\ES_MYFZMR_FZXMXBYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_MYFZMR_MYETYPWJ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_MYFZMR_MYETYPWJYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_BJBDN.js" />
@@ -736,6 +739,7 @@
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_ESJDController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_ESJJController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_JJRYController.cs" />
+    <Compile Include="Areas\Business\Controllers\ES\ES_MYFZMR_FZXMXBController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_MYFZMR_MYETYPWJController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_BJBDNController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_ESSJController.cs" />
@@ -868,6 +872,7 @@
     <Content Include="Areas\Business\Views\ES_JDJJBG_JJRY\ES_JDJJBG_JJRY.cshtml" />
     <Content Include="Areas\Business\Views\ES_JDJJBG_BGSB\ES_JDJJBG_BGSB.cshtml" />
     <Content Include="Areas\Business\Views\ES_MYFZMR_MYETYPWJ\ES_MYFZMR_MYETYPWJ.cshtml" />
+    <Content Include="Areas\Business\Views\ES_MYFZMR_FZXMXB\ES_MYFZMR_FZXMXB.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
