--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -55,6 +55,7 @@
     <Compile Include="IES_JDJJBG_ESJJBLL.cs" />
     <Compile Include="IES_JDJJBG_JJRYBLL.cs" />
     <Compile Include="IES_MYFZMR_FZXMXBBLL.cs" />
+    <Compile Include="IES_MYFZMR_MRBJBLL.cs" />
     <Compile Include="IES_MYFZMR_MYETYPWJBLL.cs" />
     <Compile Include="IES_SJSM_BJBDNBLL.cs" />
     <Compile Include="IES_SJSM_ESSJBLL.cs" />
