--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Maps\CODES_Map.cs" />
     <Compile Include="Maps\CODES_MYFZMR_Map.cs" />
     <Compile Include="Maps\CODES_PHONE_Map.cs" />
+    <Compile Include="Maps\CODES_WHYR_Map.cs" />
     <Compile Include="Maps\DISTRICT_Map.cs" />
     <Compile Include="Maps\DJJDJL_Map.cs" />
     <Compile Include="Maps\ES_JDJJBG_BGSBJBXX_Map.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Maps\ES_SJSM_PBDNJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_SMCPJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_TSJJBXX_Map.cs" />
+    <Compile Include="Maps\ES_WHYL_YSPSCPJBXX_Map.cs" />
     <Compile Include="Maps\FC_CKCFTDCWJBXX_Map.cs" />
     <Compile Include="Maps\FC_DZFJBXX_Map.cs" />
     <Compile Include="Maps\FC_SPJBXX_Map.cs" />
@@ -94,6 +96,7 @@
     <Compile Include="Models\CODES_JDJJBG.cs" />
     <Compile Include="Models\CODES_MYFZMR.cs" />
     <Compile Include="Models\CODES_PHONE.cs" />
+    <Compile Include="Models\CODES_WHYR.cs" />
     <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\DJJDJL.cs" />
     <Compile Include="Models\EncryptionHelper.cs" />
@@ -109,6 +112,7 @@
     <Compile Include="Models\ES_SJSM_PBDNJBXX.cs" />
     <Compile Include="Models\ES_SJSM_SMCPJBXX.cs" />
     <Compile Include="Models\ES_SJSM_TSJJBXX.cs" />
+    <Compile Include="Models\ES_WHYL_YSPSCPJBXX.cs" />
     <Compile Include="Models\FC_CKCFTDCWJBXX.cs" />
     <Compile Include="Models\FC_DZFJBXX.cs" />
     <Compile Include="Models\FC_SPJBXX.cs" />
