--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -66,6 +66,7 @@
     <Compile Include="BLL\ES_SJSM_PBDNBLL.cs" />
     <Compile Include="BLL\ES_SJSM_SMCPBLL.cs" />
     <Compile Include="BLL\ES_SJSM_TSJBLL.cs" />
+    <Compile Include="BLL\ES_WHYL_YSPSCPBLL.cs" />
     <Compile Include="BLL\FC_CKCFTDCWBLL.cs" />
     <Compile Include="BLL\FC_DZFBLL.cs" />
     <Compile Include="BLL\FC_SPBLL.cs" />
